documentation/_build/doctest/output.txt
Results of doctest builder run on 2013-04-29 20:43:03
=====================================================

Document: index
---------------
**********************************************************************
File "index.rst", line 8, in default
Failed example:
    import NASAhorizons()
Exception raised:
    Traceback (most recent call last):
      File "/usr/lib/python2.7/doctest.py", line 1289, in __run
        compileflags, 1) in test.globs
      File "/usr/lib/python2.7/site-packages/sphinx/ext/doctest.py", line 349, in compile
        return compile(code, name, self.type, flags, dont_inherit)
      File "<doctest default[0]>", line 1
        import NASAhorizons()
                           ^
    SyntaxError: invalid syntax
**********************************************************************
File "index.rst", line 9, in default
Failed example:
    nasa = NASAhorizons()
Exception raised:
    Traceback (most recent call last):
      File "/usr/lib/python2.7/doctest.py", line 1289, in __run
        compileflags, 1) in test.globs
      File "<doctest default[1]>", line 1, in <module>
        nasa = NASAhorizons()
    NameError: name 'NASAhorizons' is not defined
**********************************************************************
File "index.rst", line 10, in default
Failed example:
    nasa.create_session()
Exception raised:
    Traceback (most recent call last):
      File "/usr/lib/python2.7/doctest.py", line 1289, in __run
        compileflags, 1) in test.globs
      File "<doctest default[2]>", line 1, in <module>
        nasa.create_session()
    NameError: name 'nasa' is not defined
**********************************************************************
File "index.rst", line 11, in default
Failed example:
    nasa.has_session()
Exception raised:
    Traceback (most recent call last):
      File "/usr/lib/python2.7/doctest.py", line 1289, in __run
        compileflags, 1) in test.globs
      File "<doctest default[3]>", line 1, in <module>
        nasa.has_session()
    NameError: name 'nasa' is not defined
**********************************************************************
1 items had failures:
   4 of   4 in default
4 tests in 1 items.
0 passed and 4 failed.
***Test Failed*** 4 failures.

Doctest summary
===============
    4 tests
    4 failures in tests
    0 failures in setup code
    0 failures in cleanup code
